<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnBack"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/ic_back"
        android:padding="16dp"
        android:text="" />

    <EditText
        android:id="@+id/edtTxtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnBack"
        android:layout_marginTop="16dp"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="16dp"/>

    <EditText
        android:id="@+id/edtTxtWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtTxtName"
        android:layout_marginTop="16dp"
        android:hint="@string/weight"
        android:inputType="numberDecimal"
        android:padding="16dp"/>

    <EditText
        android:id="@+id/edtTxtHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtTxtWeight"
        android:layout_marginTop="8dp"
        android:hint="@string/height"
        android:inputType="numberDecimal"
        android:padding="16dp"/>

    <RadioGroup
        android:id="@+id/radioGroupGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtTxtHeight"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:padding="16dp">

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"/>

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"/>
    </RadioGroup>

    <EditText
        android:id="@+id/edtTxtAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/radioGroupGender"
        android:layout_marginTop="8dp"
        android:hint="@string/age"
        android:inputType="number"
        android:padding="16dp"/>

    <Button
        android:id="@+id/btnUpdateProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtTxtAge"
        android:layout_marginTop="80dp"
        android:padding="16dp"
        android:text="@string/update_profile"
        android:textSize="16dp"/>
</RelativeLayout>