<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnBackMain"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/ic_back"
        android:padding="16dp"
        android:text="" />

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignRight="@id/btnBackMain"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="-330dp"
        android:background="@drawable/ic_edit"
        android:padding="16dp"
        android:text="" />

    <TextView
        android:id="@+id/txtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnBackMain"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:text="@string/username"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/txtWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtUsername"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:text="@string/weight"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/txtHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtWeight"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:text="@string/height"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/txtGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtHeight"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:text="@string/gender"
        android:textSize="18sp"/>


    <TextView
        android:id="@+id/txtAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtGender"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:text="@string/age"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/BMI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtAge"
        android:layout_marginTop="20dp"
        android:padding="20dp"
        android:gravity="center"
        android:text="@string/bmi"
        android:textSize="22sp"/>

</RelativeLayout>