<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/dailySummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/daily_summary"
        android:textSize="24sp"
        android:gravity="center"
        android:padding="16dp" />

    <LinearLayout
        android:id="@+id/layoutFitness"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_below="@id/dailySummary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_steps" />

            <TextView
                android:id="@+id/txtSteps"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:text="@string/steps"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_calories_burned" />

            <TextView
                android:id="@+id/txtCalories"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:text="@string/calories_burned"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_distance" />

            <TextView
                android:id="@+id/txtDistance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:text="@string/distance"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnDetailedInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutFitness"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="84dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="84dp"
        android:gravity="center|center_horizontal"
        android:padding="16dp"
        android:text="@string/details"
        android:textAllCaps="false"
        android:textSize="18sp" />

</RelativeLayout>